--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "dev-ios": "react-native run-ios",
+    "ios": "npm run start & npm run dev-ios"
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-vector-icons": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.4.13",
-    "@types/react-native": "^0.56.17",
+    "@types/react": "^16.4.14",
+    "@types/react-native": "^0.56.18",
+    "@types/react-native-vector-icons": "^4.6.3",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
     "jest": "23.5.0",
