--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-gesture-handler": "^1.0.7",
+    "react-native-largelist-v2": "^2.0.2",
+    "react-native-spring-scrollview": "^0.0.23",
     "react-native-vector-icons": "^5.0.0"
   },
   "devDependencies": {
