--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "ios": "npm run start & npm run dev-ios"
   },
   "dependencies": {
+    "@rematch/core": "^0.6.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-gesture-handler": "^1.0.7",
     "react-native-largelist-v2": "^2.0.2",
     "react-native-spring-scrollview": "^0.0.23",
-    "react-native-vector-icons": "^5.0.0"
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.14.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.14",
     "@types/react-native": "^0.56.18",
     "@types/react-native-vector-icons": "^4.6.3",
+    "@types/react-navigation": "^2.0.20",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
     "jest": "23.5.0",
